--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="stepmarker">Шаг 2</div>
                     </div>
                     <div class="right-container">
-                        <div class="holder-step1">
+                        <div class="holder-step2">
                             <div class="section-title">Выберите технику, которую хотите отремонтировать</div>
                             <div class="holder-devices">
                                 <div class="card card-brand">
@@ -105,7 +105,7 @@
             </div>
         </section>
 
-        <!--STEP 2-->
+        <!--STEP 3-->
         <section class="section" id="step-3">
             <div class="container">
                 <div class="holder-section">
@@ -113,7 +113,7 @@
                         <div class="stepmarker">Шаг 3</div>
                     </div>
                     <div class="right-container">
-                        <div class="holder-step1">
+                        <div class="holder-step3">
                             <div class="section-title">Выберите проблему</div>
                             <div class="holder-devices">
                                 <div class="card card-problem">
@@ -155,6 +155,73 @@
                                     <div>
                                         <span class="title">Другая проблема</span>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--STEP 4-->
+        <section class="section" id="step-4">
+            <div class="container">
+                <div class="holder-section">
+                    <div class="left-container">
+                        <div class="stepmarker">Шаг 4</div>
+                    </div>
+                    <div class="right-container">
+                        <div class="holder-step4">
+                            <div class="section-title">Оформление заявки</div>
+                            <div class="guarantee">
+                                <div class="photo-person">
+                                    <div>
+                                        <img src="image/person.png" alt="person">
+                                    </div>
+                                </div>
+                                <div class="guarantee-desc">
+                                    <p>“МаксиСервис 24” дает фирменную гарантию на работы по ремонту стиральных машин на
+                                        дому.
+                                        Мы осуществляем ремонт стиральных машин различных фирм, в том числе - Ardo,
+                                        Ariston, Beko,
+                                        Bosh, Candy, Elrctrolux, Hansa, Indesit, LG, Sumsung, Zanussi и других
+                                        производителей в СПб</p>
+                                    <span>Руководитель отдела ремонта бытовой техники Галкин А. В.</span>
+                                </div>
+                            </div>
+                            <div class="order-holder">
+                                <div class="description-device">
+                                    <div class="image-device">
+                                        <img src="image/zcg.png" alt="img">
+                                    </div>
+                                    <div class="details-device">
+                                        <div>
+                                            <div class="type">Тип техники</div>
+                                            <div class="type-name">Стиральная машина</div>
+                                        </div>
+                                        <div>
+                                            <div class="type">Неисправность</div>
+                                            <div class="type-name">Течёт машина</div>
+                                        </div>
+                                        <div class="restoring">
+                                            <span>Востановление соединения, без замены деталей</span>
+                                        </div>
+                                        <div class="repair-price">
+                                            <span class="price-title">Сумма ремонта</span>
+                                            <span class="price">2000 руб</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="order-form">
+                                    <p>Заполните ваши контактные данные
+                                        и мы презвоним вам в течении 5 минут</p>
+                                    <form action="/">
+                                        <div class="form-holder">
+                                            <input type="text" placeholder="Ваше имя">
+                                            <input type="number" placeholder="Ваш телефон">
+                                            <input type="submit" value="Отправить заявку на ремонт">
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
