--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--<link href="http://allfont.ru/allfont.css?fonts=officinasanswinctt" rel="stylesheet" type="text/css"/>-->
+    <link href="http://allfont.ru/allfont.css?fonts=officinasanswinctt" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/main.css">
     <title>МаксиСервис</title>
 </head>
@@ -57,48 +57,7 @@
                     <div class="right-container">
                         <div class="holder-step2">
                             <div class="section-title">Выберите технику, которую хотите отремонтировать</div>
-                            <div class="holder-brands">
-                                <!--<div class="card card-brand">-->
-                                    <!--<div>-->
-                                        <!--<img src="image/samsung-logo-png5.png" alt="samsung">-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-brand">-->
-                                    <!--<div>-->
-                                        <!--<img src="image/hansa.png" alt="hansa">-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-brand">-->
-                                    <!--<div>-->
-                                        <!--<img src="image/lg.png" alt="lg">-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-brand">-->
-                                    <!--<div>-->
-                                        <!--<img src="image/beko.png" alt="beko">-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-brand">-->
-                                    <!--<div>-->
-                                        <!--<img src="image/aeg.png" alt="aeg">-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-brand">-->
-                                    <!--<div>-->
-                                        <!--<img src="image/asko.png" alt="asko">-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-brand">-->
-                                    <!--<div>-->
-                                        <!--<img src="image/bosch.png" alt="bosch">-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-brand">-->
-                                    <!--<div>-->
-                                        <!--<img src="image/gorenje.png" alt="gorenje">-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            </div>
+                            <div class="holder-brands"></div>
                         </div>
                     </div>
                 </div>
@@ -115,48 +74,7 @@
                     <div class="right-container">
                         <div class="holder-step3">
                             <div class="section-title">Выберите проблему</div>
-                            <div class="holder-problems">
-                                <!--<div class="card card-problem">-->
-                                    <!--<div>-->
-                                        <!--<span class="title">Течёт машина</span>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-problem">-->
-                                    <!--<div>-->
-                                        <!--<span class="title">Не набирает воду</span>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-problem">-->
-                                    <!--<div>-->
-                                        <!--<span class="title">Не сливает воду</span>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-problem">-->
-                                    <!--<div>-->
-                                        <!--<span class="title">Не крутится барабан</span>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-problem">-->
-                                    <!--<div>-->
-                                        <!--<span class="title">Не открывается Не закрывается</span>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-problem">-->
-                                    <!--<div>-->
-                                        <!--<span class="title">Извлечение посторонних предметов</span>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-problem">-->
-                                    <!--<div>-->
-                                        <!--<span class="title">Другая проблема</span>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="card card-problem">-->
-                                    <!--<div>-->
-                                        <!--<span class="title">Другая проблема</span>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            </div>
+                            <div class="holder-problems"></div>
                         </div>
                     </div>
                 </div>
