add images, add IDs for odjects

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                         <div class="holder-step1">
                             <div class="section-title">Выберите технику, которую хотите отремонтировать</div>
                             <div class="holder-devices">
-                                <div class="card card-device" data-device="electric-stove">
+                                <div class="card card-device card-electric-stove" data-device="electric-stove">
                                     <div class="title">Электроплита</div>
                                 </div>
-                                <div class="card card-device" data-device="fridge">
+                                <div class="card card-device card-fridge" data-device="fridge">
                                     <div class="title">Холодильник</div>
                                 </div>
-                                <div class="card card-device" data-device="washer">
+                                <div class="card card-device card-washer" data-device="washer">
                                     <div class="title">Стиральная машина</div>
                                 </div>
-                                <div class="card card-device" data-device="dishwasher">
+                                <div class="card card-device card-dishwasher" data-device="dishwasher">
                                     <div class="title">Посудомоечная машина</div>
                                 </div>
                             </div>
