--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <div class="order-holder">
                                 <div class="description-device">
                                     <div class="image-device">
-                                        <img src="image/zcg.png" alt="img">
+                                        <img src="image/wave.png" alt="img">
                                     </div>
                                     <div class="details-device">
                                         <div>
