--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="http://allfont.ru/allfont.css?fonts=officinasanswinctt" rel="stylesheet" type="text/css"/>
+    <!--<link href="http://allfont.ru/allfont.css?fonts=officinasanswinctt" rel="stylesheet" type="text/css"/>-->
     <link rel="stylesheet" href="css/main.css">
     <title>МаксиСервис</title>
 </head>
@@ -154,6 +154,6 @@
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/data.js"></script>
-<script src="js/common.js"></script>
+<script src="js/common1.js"></script>
 </body>
 </html>
