--- a/index.html
+++ b/index.html
@@ -108,39 +108,39 @@
                                 </div>
                             </div>
                             <div class="order-holder">
-                                <div class="description-device">
-                                    <div class="image-device">
-                                        <img src="image/wave.png" alt="img">
-                                    </div>
-                                    <div class="details-device">
-                                        <div>
-                                            <div class="type">Тип техники</div>
-                                            <div class="type-name">Стиральная машина</div>
-                                        </div>
-                                        <div>
-                                            <div class="type">Неисправность</div>
-                                            <div class="type-name">Течёт машина</div>
-                                        </div>
-                                        <div class="restoring">
-                                            <span>Востановление соединения, без замены деталей</span>
-                                        </div>
-                                        <div class="repair-price">
-                                            <span class="price-title">Сумма ремонта</span>
-                                            <span class="price">2000 руб</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="order-form">
-                                    <p>Заполните ваши контактные данные
-                                        и мы презвоним вам в течении 5 минут</p>
-                                    <form action="/">
-                                        <div class="form-holder">
-                                            <input type="text" placeholder="Ваше имя">
-                                            <input type="number" placeholder="Ваш телефон">
-                                            <input type="submit" value="Отправить заявку на ремонт">
-                                        </div>
-                                    </form>
-                                </div>
+                                <!--<div class="description-device">-->
+                                    <!--<div class="image-device">-->
+                                        <!--<img src="image/wave.png" alt="img">-->
+                                    <!--</div>-->
+                                    <!--<div class="details-device">-->
+                                        <!--<div>-->
+                                            <!--<div class="type">Тип техники</div>-->
+                                            <!--<div class="type-name">Стиральная машина</div>-->
+                                        <!--</div>-->
+                                        <!--<div>-->
+                                            <!--<div class="type">Неисправность</div>-->
+                                            <!--<div class="type-name">Течёт машина</div>-->
+                                        <!--</div>-->
+                                        <!--<div class="restoring">-->
+                                            <!--<span>Востановление соединения, без замены деталей</span>-->
+                                        <!--</div>-->
+                                        <!--<div class="repair-price">-->
+                                            <!--<span class="price-title">Сумма ремонта</span>-->
+                                            <!--<span class="price">2000 руб</span>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="order-form">-->
+                                    <!--<p>Заполните ваши контактные данные-->
+                                        <!--и мы презвоним вам в течении 5 минут</p>-->
+                                    <!--<form action="/">-->
+                                        <!--<div class="form-holder">-->
+                                            <!--<input type="text" placeholder="Ваше имя">-->
+                                            <!--<input type="number" placeholder="Ваш телефон">-->
+                                            <!--<input type="submit" value="Отправить заявку на ремонт">-->
+                                        <!--</div>-->
+                                    <!--</form>-->
+                                <!--</div>-->
                             </div>
                         </div>
                     </div>
