--- a/index.html
+++ b/index.html
@@ -154,6 +154,6 @@
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/data.js"></script>
-<script src="js/common1.js"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
