--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 </div>
 
 <script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery.smooth-scroll.js"></script>
 <script src="js/data.js"></script>
 <script src="js/common.js"></script>
 </body>
