--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--<link href="http://allfont.ru/allfont.css?fonts=officinasanswinctt" rel="stylesheet" type="text/css"/>-->
+    <link href="http://allfont.ru/allfont.css?fonts=officinasanswinctt" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/main.css">
     <title>МаксиСервис</title>
 </head>
@@ -107,41 +107,7 @@
                                     <span>Руководитель отдела ремонта бытовой техники Галкин А. В.</span>
                                 </div>
                             </div>
-                            <div class="order-holder">
-                                <!--<div class="description-device">-->
-                                    <!--<div class="image-device">-->
-                                        <!--<img src="image/wave.png" alt="img">-->
-                                    <!--</div>-->
-                                    <!--<div class="details-device">-->
-                                        <!--<div>-->
-                                            <!--<div class="type">Тип техники</div>-->
-                                            <!--<div class="type-name">Стиральная машина</div>-->
-                                        <!--</div>-->
-                                        <!--<div>-->
-                                            <!--<div class="type">Неисправность</div>-->
-                                            <!--<div class="type-name">Течёт машина</div>-->
-                                        <!--</div>-->
-                                        <!--<div class="restoring">-->
-                                            <!--<span>Востановление соединения, без замены деталей</span>-->
-                                        <!--</div>-->
-                                        <!--<div class="repair-price">-->
-                                            <!--<span class="price-title">Сумма ремонта</span>-->
-                                            <!--<span class="price">2000 руб</span>-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="order-form">-->
-                                    <!--<p>Заполните ваши контактные данные-->
-                                        <!--и мы презвоним вам в течении 5 минут</p>-->
-                                    <!--<form action="/">-->
-                                        <!--<div class="form-holder">-->
-                                            <!--<input type="text" placeholder="Ваше имя">-->
-                                            <!--<input type="number" placeholder="Ваш телефон">-->
-                                            <!--<input type="submit" value="Отправить заявку на ремонт">-->
-                                        <!--</div>-->
-                                    <!--</form>-->
-                                <!--</div>-->
-                            </div>
+                            <div class="order-holder"></div>
                         </div>
                     </div>
                 </div>
@@ -153,7 +119,6 @@
 </div>
 
 <script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/jquery.smooth-scroll.js"></script>
 <script src="js/data.js"></script>
 <script src="js/common.js"></script>
 </body>
